Add ApplicationUser list endpoint